hard-gists/260617/run.log
=== Docker Run Log for 260617 ===
Started at: Mi 29. Okt 13:09:39 CET 2025

[2025-10-29 13:09:39] START: Running container for 260617
[2025-10-29 13:09:40] SUCCESS: Container c2815a01c6dda111fb068626acaccf6bc04987abd0259d8e6f47ba9f299bb222 started for 260617
=== Container logs for 260617 ===
  File "/snippet.py", line 14
    print song_details
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 260617 ===
[2025-10-29 13:09:42] INFO: Container c2815a01c6dda111fb068626acaccf6bc04987abd0259d8e6f47ba9f299bb222 has stopped
